# Fixed stripe on mobile

--- a/themes/xstore-child/css/custom-style.css
+++ b/themes/xstore-child/css/custom-style.css
@@ -424,6 +424,9 @@ body > div.template-container > div.template-content > div.page-wrapper > div.co
 .footer-bottom{
     padding: 30px 0;
 }
+.et-follow-buttons.align-center {
+    text-align: left;
+}
 
 /*Responsive*/
 @media (max-width:1024px){
@@ -532,6 +535,19 @@ body > div.template-container > div.template-content > div.page-wrapper > div.co
         display: block !important;
         position: relative;
         top: 5px;
+    }
+    .order-review{
+        padding: 20px 15px;
+    }
+    #wc-stripe-cc-form{
+        padding: 10px 5px;
+        margin-bottom: 10px;
+    }
+    .footer-widgets{
+        text-align: center;
+    }
+    .et-follow-buttons.align-center {
+        text-align: center;
     }
 }
 @media (max-width: 320px){
